Added RGBW color picker
